appId: com.newroztech.gamewallet

tags:
  - smoke
  - regression
  - P0
  - Functional
---
#Runflow use for the first login file the this file is exceuted
- launchApp

#Using ENV LOgin the app
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${Mobile_Number}"
      PASSWORD: "${Password}"
- assertVisible:
    id: bannerImage
- tapOn:
    id: closeBtn
- tapOn: open_drawer
- tapOn: SUPER ZICHARGE
- runFlow:
    when:
      visible: PROCEED
    commands:
      - assertVisible: PROCEED
      - tapOn: PROCEED
- runFlow:
    when:
      visible: Home
    commands:
      - assertVisible: Home
- assertVisible:
    id: "supportImageView"
- assertVisible: "Get Support"
- tapOn:
    id: "supportLayout"
- assertVisible:
    id: "appLogo"
- assertVisible: "LIVE CHAT"
- assertVisible: "ZiDesk"
- assertVisible: "Online"
- assertVisible: "\u0633\u06b5\u0627\u0648\u060c \u0628\u06d5\u062e\u06ce\u0631\u0628\u06ce\u06cc\u062a \u0628\u06c6 \u067e\u0627\u06b5\u067e\u0634\u062a\u06cc \u0632\u06cc\u0686\u0627\u0631\u062c. \u062a\u06a9\u0627\u06cc\u06d5 \u06a9\u06ce\u0634\u06d5\u06a9\u06d5\u062a \u06cc\u0627\u0646 \u067e\u0631\u0633\u06cc\u0627\u0631\u06d5\u06a9\u06d5\u062a \u0628\u0646\u0648\u0648\u0633\u06d5."
- assertVisible: "\u0645\u0631\u062d\u0628\u0627\u064b \u0628\u0643 \u0641\u064a \u062f\u0639\u0645 \u0632\u064a\u062c\u0627\u0631\u062c. \u064a\u0631\u062c\u0649 \u0637\u0631\u062d \u0645\u0634\u0643\u0644\u062a\u0643 \u0623\u0648 \u0633\u0624\u0627\u0644\u0643."
- assertVisible: "Welcome to Zicharge Support. Please state your issue or question."
- assertVisible: "Type your message..."
- assertVisible: "Attach file"
- assertVisible:
    id: "babylon-chat-send"
- tapOn: "Type your message..."
- inputText: "Trade"
- tapOn:
    id: "babylon-chat-send"
- tapOn: "BACK"
- runFlow:
    file: ../../flows/teardown.yaml